--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ about_content: | # this will include new lines to allow paragraphs
   [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and I participated in an 
   Innovation Think Tank in [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
 
-  <div style="text-align: right"> [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
-  [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / CV </div>
+  [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
+  [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / CV
 
 # News Section
 more_title: News
@@ -40,7 +40,7 @@ more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organizers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with [ECCV](https://eccv2020.eu/) 
   in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement forUnderwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
-  - **Nov. 2019:** I defended my PhD thesis, titled Acoustic Source Localisation in Constrained Environments. Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
+  - **Nov. 2019:** I defended my PhD thesis, titled [Acoustic Source Localisation in Constrained Environments](publications/theses/vargas2020_phd.pdf). Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
   and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides here.
   - **Oct. 2019:** I participated in the third [ORCA Hub](https://orcahub.org/) demonstrations. Press release [here](https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations).
   - **Jan. 2019:** I joined [ORCA Hub](https://orcahub.org/) as Research Associate.
