--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ about_content: | # this will include new lines to allow paragraphs
   Innovation Think Tank in [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
 
   [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
-  [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / CV
+  [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / [CV](cv/vargas_cv.pdf)
 
 # News Section
 more_title: News
