--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ more_content: | # this will include new lines to allow paragraphs
   in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement forUnderwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
   - **Nov. 2019:** I defended my PhD thesis, titled [Acoustic Source Localisation in Constrained Environments](publications/theses/vargas2020_phd.pdf). Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
-  and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides here.
+  and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides [here](publications/theses/vargas2020_phd_slides.pdf).
   - **Oct. 2019:** I participated in the third [ORCA Hub](https://orcahub.org/) demonstrations. Press release [here](https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations).
   - **Jan. 2019:** I joined [ORCA Hub](https://orcahub.org/) as Research Associate.
 
