--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ projects_content: | # this will include new lines to allow paragraphs
 
   - **E. Vargas**, Acoustic Source Localisation in Constrained Environments, *PhD Thesis*, 
   Heriot-Watt University, Edinburgh, United Kingdom, February 2020.<br>
-  <mark>[pdf](publications/theses/vargas2020_phd.pdf)</mark>
+  <a href="publications/theses/vargas2020_phd.pdf"><span>pdf</span></a>
 
   - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Master 
   Program in Computer Vision and Robotics (ViBot), Edinburgh, United Kingdom, June 2015.
