--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,9 @@ projects_content: | # this will include new lines to allow paragraphs
 
   - **E. Vargas**, Acoustic Source Localisation in Constrained Environments, *PhD Thesis*, 
   Heriot-Watt University, Edinburgh, United Kingdom, February 2020.<br>
-  <a href="publications/theses/vargas2020_phd.pdf"><span style="background-color: #FFFF00">pdf</span></a>
+  <a style="text-decoration:none" href="publications/theses/vargas2020_phd.pdf"><span style="background-color: #F22233">pdf</span></a> 
+  <a style="text-decoration:none" href="publications/theses/vargas2020_phd_slides.pdf"><span style="background-color: #F2D022">bib</span></a>
+  <a style="text-decoration:none" href="publications/theses/vargas2020_phd_slides.pdf"><span style="background-color: #F29E38">ppt</span></a>
 
   - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Master 
   Program in Computer Vision and Robotics (ViBot), Edinburgh, United Kingdom, June 2015.
