--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Elizabeth Vargas
 title: Research Associate
+phone: Earl Mountbatten Building, G.06<br> Heriot-Watt University, Edinburgh
 email: elizabeth.vargas@hw.ac.uk
 #website: www.github.com/sproogen/resume-theme
 
