--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ about_content: | # this will include new lines to allow paragraphs
   [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm) and my Master's degree in Computer Vision and Robotics from an Erasmus Mundus 
   Master Programme called [ViBot](https://www.vibot.org/), awarded by *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my 
   Bachelor's degree in computer science from [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). During my studies, I have also spent time as a research intern at 
-  [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and I participated in an 
-  Innovation Think Tank in [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
+  [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and participated in an 
+  Innovation Think Tank organised by [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
 
   [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
   [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / [CV](cv/vargas_cv.pdf)
