--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ more_content: | # this will include new lines to allow paragraphs
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
-  - **2019-Now:** *Research Associate.* [ORCA Hub](https://orcahub.org/).
+  - **2019-Now:** <font hex="#2F3136">**Research Associate.**</font> [ORCA Hub](https://orcahub.org/).
   - **2015-2019:** *PhD Signal Processing.* [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
   - **2013-2015:** *MSc Computer Vision and Robotics.* Erasmus Mundus Master Programme in Computer Vision and Robotics [(ViBot)](https://www.vibot.org/). Advisor: 
