--- a/_config.yml
+++ b/_config.yml
@@ -52,12 +52,13 @@ more_content: | # this will include new lines to allow paragraphs
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
-  - **2019-Now:** <font hex="#2F3136">**Research Associate.**</font> [ORCA Hub](https://orcahub.org/).
+  - **2019-Now:** <font hex="#2F3136"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
   - **2015-2019:** *PhD Signal Processing.* [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
   - **2013-2015:** *MSc Computer Vision and Robotics.* Erasmus Mundus Master Programme in Computer Vision and Robotics [(ViBot)](https://www.vibot.org/). Advisor: 
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
   - **Summer 2015:** *Research Intern.* [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
+  - **2012-2013:** *Project Engineer.* [IVU Traffic Technologies](https://www.ivu.com/).
   - **2006-2012:** *BSc in Computer Science.* [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
   [Maria Trujillo](http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe).
   - **Spring 2012:** *Innovation Think Tank Participant.* [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
