--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
   I am currently a Research Associate at [ORCA Hub](https://orcahub.org/) working on computer vision for underwater robots. I obtained my PhD in Signal Processing from 
   [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm) and my Master's degree in Computer Vision and Robotics from an Erasmus Mundus 
-  Master Programme called [ViBot](https://www.vibot.org/), awarded by *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my 
+  Master Programme called [VIBOT](https://www.vibot.org/), awarded by *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my 
   Bachelor's degree in computer science from [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). During my studies, I have also spent time as a research intern at 
   [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and participated in an 
   Innovation Think Tank organised by [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
@@ -52,10 +52,10 @@ more_content: | # this will include new lines to allow paragraphs
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
-  - **2019-Now:** <font hex="#2F3136"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
+  - **2019-Now:** <font hex="##737982"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
   - **2015-2019:** *PhD Signal Processing.* [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
-  - **2013-2015:** *MSc Computer Vision and Robotics.* Erasmus Mundus Master Programme in Computer Vision and Robotics [(ViBot)](https://www.vibot.org/). Advisor: 
+  - **2013-2015:** *MSc Computer Vision and Robotics.* Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
   - **Summer 2015:** *Research Intern.* [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
   - **2012-2013:** *Project Engineer.* [IVU Traffic Technologies](https://www.ivu.com/).
@@ -102,7 +102,7 @@ projects_content: | # this will include new lines to allow paragraphs
   Heriot-Watt University, Edinburgh, United Kingdom, February 2020. 
   <a href="publications/theses/vargas2020_phd.pdf">[pdf]</a> 
   <a href="publications/theses/vargas2020_phd.bib">[bib]</a> 
-  <a href="publications/theses/vargas2020_phd_slides.pdf">[ppt]</a> 
+  <a href="publications/theses/vargas2020_phd_slides.pdf">[slides]</a> 
 
   - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Master 
   Program in Computer Vision and Robotics (ViBot), Edinburgh, United Kingdom, June 2015.
