--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ more_content: | # this will include new lines to allow paragraphs
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
-  - **2019-Now:** <font color="#737982"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
+  - **2019-Now:** <font color="#2F4F4F"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
   - **2015-2019:** <font color="#737982"><b>PhD Signal Processing.</b></font> [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
   - **2013-2015:** <font color="#737982"><b>MSc Computer Vision and Robotics.</b></font> Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
