--- a/_config.yml
+++ b/_config.yml
@@ -52,18 +52,18 @@ more_content: | # this will include new lines to allow paragraphs
 experience_title: Timeline
 experience_content: | # this will include new lines to allow paragraphs
 
-  - **2019-Now:** <font color="#737982"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
-  - **2015-2019:** <font color="#737982"><b>PhD Signal Processing.</b></font> [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
+  - **2019-Now:** <font color="#2F4F4F"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
+  - **2015-2019:** <font color="#2F4F4F"><b>PhD Signal Processing.</b></font> [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
-  - **2013-2015:** <font color="#737982"><b>MSc Computer Vision and Robotics.</b></font> Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
+  - **2013-2015:** <font color="#2F4F4F"><b>MSc Computer Vision and Robotics.</b></font> Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
-  - **Summer 2015:** <font color="#737982"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
-  - **2012-2013:** <font color="#737982"><b>Project Engineer.</b></font> [IVU Traffic Technologies](https://www.ivu.com/).
-  - **2006-2012:** <font color="#737982"><b>BSc in Computer Science.</b></font> [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
+  - **Summer 2015:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
+  - **2012-2013:** <font color="#2F4F4F"><b>Project Engineer.</b></font> [IVU Traffic Technologies](https://www.ivu.com/).
+  - **2006-2012:** <font color="#2F4F4F"><b>BSc in Computer Science.</b></font> [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
   [Maria Trujillo](http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe).
-  - **Spring 2012:** <font color="#737982"><b>Innovation Think Tank Participant.</b></font> [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
-  - **Spring 2011:** <font color="#737982"><b>Research Intern.</b></font> [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html). Advisor: [Martin Weibrecht](https://www.linkedin.com/in/martin-weibrecht-8b133723/).
-  - **2010-2011:** <font color="#737982"><b>BSc Exchange Student.</b></font> [Friedrich-Alexander-Universitat Erlangen-Nurnberg](https://www.fau.eu/). 
+  - **Spring 2012:** <font color="#2F4F4F"><b>Innovation Think Tank Participant.</b></font> [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
+  - **Spring 2011:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html). Advisor: [Martin Weibrecht](https://www.linkedin.com/in/martin-weibrecht-8b133723/).
+  - **2010-2011:** <font color="#2F4F4F"><b>BSc Exchange Student.</b></font> [Friedrich-Alexander-Universitat Erlangen-Nurnberg](https://www.fau.eu/). 
 
 # Publications Section
 projects_title: Publications
@@ -81,7 +81,7 @@ projects_content: | # this will include new lines to allow paragraphs
   - **E. Vargas**, K. Brown, K. Subr, Impact of Microphone Array Configurations on Robust 
   Indirect 3D Acoustic Source Localization, in *International Conference on Acoustics, 
   Speech and Signal Processing* **(ICASSP)**, Calgary, Canada, April 2018. 
-  ***(Oral Presentation)***
+  <span style="background-color:#CCEC00"><b>Oral Presentation</b></span>
   <a href="publications/conferences/vargas2018_icassp.pdf">[pdf]</a> 
   <a href="publications/conferences/vargas2018_icassp.bib">[bib]</a>
 
