--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ projects_content: | # this will include new lines to allow paragraphs
   <a href="publications/theses/vargas2020_phd.bib">[bib]</a> 
   <a href="publications/theses/vargas2020_phd_slides.pdf">[slides]</a> 
 
-  - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Master 
-  Program in Computer Vision and Robotics (ViBot), Edinburgh, United Kingdom, June 2015.
+  - **E. Vargas**, Texture Enhanced Tissue Analysis, *MSc Thesis*, Erasmus Mundus Masters in 
+  VIsion and roBOTics (VIBOT), Edinburgh, United Kingdom, June 2015.
   <a href="publications/theses/vargas2015_msc.pdf">[pdf]</a> 
   <a href="publications/theses/vargas2015_msc.bib">[bib]</a> 
 
