--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ experience_content: | # this will include new lines to allow paragraphs
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
   - **Summer 2015:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
   - **2012-2013:** <font color="#2F4F4F"><b>Project Engineer.</b></font> [IVU Traffic Technologies](https://www.ivu.com/).
-  - **2006-2012:** <font color="#2F4F4F"><b>BSc in Computer Science.</b></font> [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
+  - **2006-2012:** <font color="#2F4F4F"><b>BSc Computer Science.</b></font> [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
   [Maria Trujillo](http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe).
   - **Spring 2012:** <font color="#2F4F4F"><b>Innovation Think Tank Participant.</b></font> [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
   - **Spring 2011:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html). Advisor: [Martin Weibrecht](https://www.linkedin.com/in/martin-weibrecht-8b133723/).
