--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ about_content: | # this will include new lines to allow paragraphs
 # News Section
 more_title: News
 more_content: | # this will include new lines to allow paragraphs
-  - **Feb. 2020:** I am one of the organisers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with [ECCV](https://eccv2020.eu/) 
+  - **Feb. 2020:** I am one of the organisers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with [ECCV 2020](https://eccv2020.eu/) 
   in Glasgow, United Kingdom.
   - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
   - **Nov. 2019:** I defended my PhD thesis, titled [Acoustic Source Localisation in Constrained Environments](publications/theses/vargas2020_phd.pdf). Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
