--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,10 @@ favicon: images/favicon.ico
 # Personal info
 name: Elizabeth Vargas
 title: Research Associate
-building: Heriot-Watt University
-university: EM Building, Office G.06
+institute: Institute of Signals, Sensors and Systems
+university: Heriot-Watt University
 country: Edinburgh, United Kingdom
+office: EM G.06
 email: elizabeth.vargas@hw.ac.uk
 #website: www.github.com/sproogen/resume-theme
 
