--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ institute: Institute of Signals, Sensors and Systems
 university: Heriot-Watt University
 country: Edinburgh, United Kingdom
 office: EM G.06
-email: elizabeth (dot) vargas (at) hw (dot) ac (dot) uk
+email: elizabeth.vargas@hw.ac.uk
 #website: www.github.com/sproogen/resume-theme
 
 # Social links
