--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Elizabeth Vargas
 title: Research Associate
-institute: Institute of Signals, Sensors and Systems
+#institute: Institute of Signals, Sensors and Systems
 university: Heriot-Watt University
 country: Edinburgh, United Kingdom
 office: EM G.06
