--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ experience_content: | # this will include new lines to allow paragraphs
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
   - **2013-2015:** <font color="#2F4F4F"><b>MSc Computer Vision and Robotics.</b></font> Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
-  - **Summer 2015:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
+  - **Summer 2015:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corn&#233 Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
   - **2012-2013:** <font color="#2F4F4F"><b>Project Engineer.</b></font> [IVU Traffic Technologies](https://www.ivu.com/).
   - **2006-2012:** <font color="#2F4F4F"><b>BSc Computer Science.</b></font> [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). Advisor: 
   [Maria Trujillo](http://eisc.univalle.edu.co/index.php/la-escuela/profesores/maria-patricia-trujillo-uribe).
