--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ experience_content: | # this will include new lines to allow paragraphs
   - **2019-Present:** <font color="#2F4F4F"><b>Research Associate.</b></font> [ORCA Hub](https://orcahub.org/).
   - **2015-2019:** <font color="#2F4F4F"><b>PhD Signal Processing.</b></font> [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm). Advisors: 
   [Keith Brown](https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown) and [Kartic Subr](http://homepages.inf.ed.ac.uk/ksubr/).  
-  - **2013-2015:** <font color="#2F4F4F"><b>MSc Computer Vision and Robotics.</b></font> Erasmus Mundus Masters in VIsion and roBOTics [(VIBOT)](https://www.vibot.org/). Advisor: 
+  - **2013-2015:** <font color="#2F4F4F"><b>MSc Computer Vision and Robotics.</b></font> [Erasmus Mundus Masters in Vision and Robotics](https://www.vibot.org/). Advisor: 
   [Keith Goatman](https://www.linkedin.com/in/keith-goatman-6a9ab395/?originalSubdomain=uk).
   - **Summer 2015:** <font color="#2F4F4F"><b>Research Intern.</b></font> [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/). Advisor: [Corne Hoogendoorn](https://scholar.google.com/citations?hl=en&user=F3t43XcAAAAJ&view_op=list_works&sortby=pubdate).
   - **2012-2013:** <font color="#2F4F4F"><b>Project Engineer.</b></font> [IVU Traffic Technologies](https://www.ivu.com/).
@@ -109,7 +109,7 @@ projects_content: | # this will include new lines to allow paragraphs
   <a href="publications/theses/vargas2020_phd_slides.pdf">[slides]</a> 
 
   - **E. Vargas**, *Texture Enhanced Tissue Analysis*, MSc Thesis, Erasmus Mundus Masters in 
-  VIsion and roBOTics (VIBOT), Edinburgh, United Kingdom, June 2015.
+  Vision and Robotics, Edinburgh, United Kingdom, June 2015.
   <a href="publications/theses/vargas2015_msc.pdf">[pdf]</a> 
   <a href="publications/theses/vargas2015_msc.bib">[bib]</a> 
   <a href="publications/theses/vargas2015_msc_slides.pdf">[slides]</a>
