--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ favicon: images/favicon.ico
 # Personal info
 name: Elizabeth Vargas
 title: Research Associate
-institute: Institute of Signals, Sensors and Systems
+institute: Ocean Systems Laboratory
 university: Heriot-Watt University
-office: EM G.06
+office: Earl Mountbatten G.06
 country: Edinburgh, United Kingdom
-email: elizabeth.vargas@hw.ac.uk
+#email: elizabeth.vargas@hw.ac.uk
 #website: www.github.com/sproogen/resume-theme
 
 # Social links
@@ -43,7 +43,7 @@ more_title: News
 more_content: | # this will include new lines to allow paragraphs
   - **Feb. 2020:** I am one of the organisers of the [Women in Computer Vision Workshop](https://sites.google.com/view/wicvworkshop-eccv2020/) to be held in conjunction with [ECCV 2020](https://eccv2020.eu/) 
   in Glasgow, United Kingdom.
-  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS](https://singapore20.oceansconference.org/).
+  - **Jan. 2020:** Our abstract *Smart Underwater Vision: Image Enhancement for Underwater 3D Mapping in the Challenging Environment* was accepted to [OCEANS 2020](https://singapore20.oceansconference.org/).
   - **Nov. 2019:** I defended my PhD thesis, titled [Acoustic Source Localisation in Constrained Environments](publications/theses/vargas2020_phd.pdf). Examiners: [Abderrahim Halimi](https://sites.google.com/site/abderrahimhalimi/) (Heriot-Watt University) 
   and [Keith Holland](https://www.southampton.ac.uk/engineering/about/staff/krh.page) (University of Southampton). Slides [here](publications/theses/vargas2020_phd_slides.pdf).
   - **Oct. 2019:** I participated in the third [ORCA Hub](https://orcahub.org/) demonstrations. Press release [here](https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations).
