Encripted Email address

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ about_content: | # this will include new lines to allow paragraphs
   [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and participated in an 
   Innovation Think Tank organised by [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
 
-  [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
+  <a href="https://mailhide.io/e/322Ka" target="_blank">Email</a> / [LinkedIn](https://www.linkedin.com/in/evargasv/) / [Google Scholar](https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en) / 
   [Github](https://github.com/evargasv) / [Twitter](https://twitter.com/elizavargasv) / [CV](cv/vargas_cv.pdf)
 
 # News Section
