--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ favicon: images/favicon.ico
 # Personal info
 name: Elizabeth Vargas
 title: Research Associate
-institute: Ocean Systems Laboratory
-university: Heriot-Watt University
-office: Earl Mountbatten G.06
-country: Edinburgh, United Kingdom
+#institute: Ocean Systems Laboratory
+#university: Heriot-Watt University
+#office: Earl Mountbatten G.06
+#country: Edinburgh, United Kingdom
 #email: elizabeth.vargas@hw.ac.uk
 #website: www.github.com/sproogen/resume-theme
 
@@ -30,7 +30,7 @@ about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
   I am currently a Research Associate at [ORCA Hub](https://orcahub.org/) working on computer vision for underwater robots. I obtained my PhD in Signal Processing from 
   [Heriot-Watt University](https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm) and my Master's degree in Computer Vision and Robotics via an Erasmus Mundus 
-  Master Programme called [VIBOT](https://www.vibot.org/), awarded by the *University of Burgundy* (France), *University of Girona* and *Heriot-Watt University*. I received my 
+  Master Programme called [VIBOT](https://www.vibot.org/), awarded by the *University of Burgundy*, *University of Girona* and *Heriot-Watt University*. I received my 
   Bachelor's degree in computer science from [Universidad del Valle](http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab). During my studies, I have also spent time as a research intern at 
   [Toshiba Medical Visualization Systems](https://research.eu.medical.canon/) and [Philips Research Aachen](https://www.philips.com/a-w/research/locations/aachen.html), and participated in an 
   Innovation Think Tank organised by [Siemens Healthcare](https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank).
